# iniamet-library

./: .gitignore  .pypirc.example  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  FUNCTION_REFERENCE.md  GITHUB_SETUP.md  GITHUB_TESTS_FIX.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  PUBLISHING.md  PUBLISH_TO_PYPI.md  README.md  RETROCOMPATIBILIDAD.md  SECURITY.md  TEST_STATUS.md  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/: CLEANUP_SUMMARY.md  FINAL_STATUS.md  READTHEDOCS_SETUP.md  REPOSITORY_STRUCTURE.md  RTD_SUMMARY.md  SECRETS_SETUP.md  SETUP_SECRETS.md  copilot-instructions.md  setup-secret.ps1
.github/workflows/: publish.yml  tests.yml
docs/: BACKWARD_COMPATIBILITY.md  BEST_PRACTICES.md  CONSISTENCY_REPORT.md  INDEX.md  MULTILANGUAGE.md  QUICK_REFERENCE.md  README_ES.md  RECETAS.md  RECIPES.md  requirements.txt
docs/source/: conf.py  configuration.rst  contributing.rst  examples.rst  index.rst  index_es.rst  installation.rst  quickstart.rst  regions.rst  variables.rst
docs/source/_static/: .gitkeep
docs/source/api/: client.rst  data.rst  qc.rst  regional.rst  stations.rst  utils.rst
docs/source/guias/: inicio_rapido.rst
examples/: EXAMPLES_GUIDE.md  README.md  backward_compatibility_demo.py  basic_usage.py  crear_mapa_todas_estaciones.py  export_stations_for_qgis.py  multi_region_download.py  regional_temperature.py  station_count_by_region.py  using_variable_constants.py
src/iniamet/: __init__.py  __main__.py  api_client.py  cache.py  client.py  config.py  data.py  qc.py  regional.py  stations.py  utils.py  visualization.py
tests/: conftest.py  test_api_client.py  test_backward_compatibility.py  test_consistency.py  test_data.py  test_qc.py  test_stations.py  test_utils.py
