[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iniamet"
version = "0.1.0"
description = "High-level Python library for Chilean INIA agrometeorological station data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "INIA Climate Data Team", email = "climate-data@inia.cl"}
]
maintainers = [
    {name = "INIA Climate Data Team", email = "climate-data@inia.cl"}
]
keywords = ["inia", "climate", "weather", "agrometeorological", "chile", "api", "meteorology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "folium>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/inia-chile/iniamet"
Documentation = "https://github.com/inia-chile/iniamet#readme"
Repository = "https://github.com/inia-chile/iniamet"
"Bug Tracker" = "https://github.com/inia-chile/iniamet/issues"
Changelog = "https://github.com/inia-chile/iniamet/blob/main/CHANGELOG.md"
"API Reference" = "https://agromet.inia.cl/api/v2"
